[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/components/popups/ConfirmPopup.gd" type="Script" id=1]
[ext_resource path="res://ui/theme/fonts/font_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/theme/button_outline_large_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/theme/button_outline_large_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/theme/panel_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/theme/button_outline_large_hover.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=7]
[ext_resource path="res://ui/theme/focus_accent.tres" type="StyleBox" id=8]
[ext_resource path="res://ui/theme/button_outline_large_accent.tres" type="StyleBox" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.239216, 1, 0.431373, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8

[node name="ConfirmPopup" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
color = Color( 0.0352941, 0.0392157, 0.129412, 0.627451 )
script = ExtResource( 1 )
min_size = Vector2( 0, 0 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = -115.5
margin_right = 228.0
margin_bottom = 115.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PanelContainer"]
margin_right = 456.0
margin_bottom = 231.0
custom_styles/panel = ExtResource( 5 )

[node name="Column" type="VBoxContainer" parent="PanelContainer"]
margin_right = 456.0
margin_bottom = 231.0
custom_constants/separation = 0

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/Column"]
margin_right = 456.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 1 )
value = 100.0
percent_visible = false

[node name="Margin" type="MarginContainer" parent="PanelContainer/Column"]
margin_top = 16.0
margin_right = 456.0
margin_bottom = 231.0
size_flags_vertical = 3

[node name="Column" type="VBoxContainer" parent="PanelContainer/Column/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 436.0
margin_bottom = 195.0
custom_constants/separation = 12

[node name="Title" type="Label" parent="PanelContainer/Column/Margin/Column"]
margin_right = 416.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Separator" type="HSeparator" parent="PanelContainer/Column/Margin/Column"]
margin_left = 8.0
margin_top = 43.0
margin_right = 408.0
margin_bottom = 51.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 4

[node name="Message" type="RichTextLabel" parent="PanelContainer/Column/Margin/Column"]
margin_top = 63.0
margin_right = 416.0
margin_bottom = 63.0
size_flags_vertical = 3
bbcode_enabled = true

[node name="Spacer" type="Control" parent="PanelContainer/Column/Margin/Column"]
margin_top = 75.0
margin_right = 416.0
margin_bottom = 95.0
rect_min_size = Vector2( 400, 20 )

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/Column/Margin/Column"]
margin_top = 107.0
margin_right = 416.0
margin_bottom = 175.0
alignment = 1

[node name="ConfirmButton" type="Button" parent="PanelContainer/Column/Margin/Column/Buttons"]
margin_right = 200.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 68 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_colors/font_color_hover = Color( 0.239216, 1, 0.431373, 1 )
custom_colors/font_color_pressed = Color( 0.239216, 1, 0.431373, 1 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 4 )
text = "Confirm"

[node name="CancelButton" type="Button" parent="PanelContainer/Column/Margin/Column/Buttons"]
margin_left = 216.0
margin_right = 416.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 68 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Cancel"
